add vim-go extension

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,6 +6,8 @@
     "extensions": [
         "ms-vscode.go"
     ],
-    "vim-extensions": [],
+    "vim-extensions": [
+        "fatih/vim-go"
+    ],
     "settings": {}
 }
