--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,9 @@ indent_style = tab
 indent_size = 4
 insert_final_newline = true
 
+[Dockerfile]
+indent_style = space
+
 [*.{json,yml}]
 indent_style = space
 indent_size = 2
