--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -11,24 +11,13 @@ services:
     volumes:
       # workspace
       - "..:/workspace"
-      # vim config
-      - "$HOME/.config/nvim:/home/code/.config/nvim:ro"
-      # git config
-      - "$HOME/.config/git:/home/code/.config/git:ro"
-      # ssh config
-      - "$HOME/.config/ssh:/home/code/.config/ssh:ro"
-      - "$HOME/.ssh:/home/code/.ssh:ro"
-      - "$SSH_AUTH_SOCK:/ssh-agent:ro"
-      # gpg config
-      - "$HOME/.config/gnupg:/home/code/.config/gnupg:ro"
-      # docker socket
-      - "/var/run/docker.sock:/var/run/docker.sock"
-    tmpfs:
-      - "/run/user/1000/:mode=0700,uid=1000,gid=1000"
+      # dotfiles
+      - "$HOME/.config/nvim:/home/code/.config/nvim"
+      - "$HOME/.config/git:/home/code/.config/git"
+      - "$HOME/.ssh:/home/code/.ssh"
+      - "$HOME/.gnupg:/home/code/.gnupg"
+      - "$SSH_AUTH_SOCK:/ssh-agent"
     environment:
       - "SSH_AUTH_SOCK=/ssh-agent"
-      - "GNUPGHOME=/home/code/.config/gnupg"
-    working_dir: "/workspace"
-    command: "sleep infinity"
 
 ...
