--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,9 @@
     "extensions": [
         "golang.go"
     ],
-    "settings": {},
+    "settings": {
+        "go.formatTool": "goimports"
+    },
     "vimExtensions": [
         "fatih/vim-go"
     ],
