chore: map vim config to devcontainer

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -12,7 +12,8 @@ services:
       # workspace
       - "..:/workspace"
       # dotfiles
-      - "$HOME/.config/nvim:/home/code/.config/nvim"
+      - "$HOME/.vimrc:/home/code/.vimrc"
+      - "$HOME/.vim/conf.d:/home/code/.vim/conf.d"
       - "$HOME/.config/git:/home/code/.config/git"
       - "$HOME/.ssh:/home/code/.ssh"
       - "$HOME/.gnupg:/home/code/.gnupg"
