--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -13,12 +13,9 @@ services:
       - "..:/workspace"
       # dotfiles
       - "$HOME/.vimrc:/home/code/.vimrc"
-      - "$HOME/.vim/conf.d:/home/code/.vim/conf.d"
-      - "$HOME/.config/git:/home/code/.config/git"
+      - "$HOME/.git:/home/code/.git"
       - "$HOME/.ssh:/home/code/.ssh"
       - "$HOME/.gnupg:/home/code/.gnupg"
       - "$SSH_AUTH_SOCK:/ssh-agent"
     environment:
       - "SSH_AUTH_SOCK=/ssh-agent"
-
-...
