--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,40 +1,10 @@
-FROM nikaro/debian-dev:latest
-
-# go path
-ENV GOPATH ${HOME}/go
-# add go to path
-ENV PATH ${GOPATH}/bin:/opt/go/bin:${PATH}
-
-ENV GO_VERSION 1.15.3
-RUN \
-    # golang
-    sudo curl -LOSs https://golang.org/dl/go${GO_VERSION}.linux-amd64.tar.gz && \
-    sudo tar -C /opt -xaf go${GO_VERSION}.linux-amd64.tar.gz && \
-    sudo rm -f go${GO_VERSION}.linux-amd64.tar.gz && \
-    :
+FROM nikaro/alpine-dev:latest
 
 RUN \
-    # go packages
-    go get \
-        github.com/mdempsky/gocode \
-        github.com/uudashr/gopkgs/cmd/gopkgs \
-        github.com/ramya-rao-a/go-outline \
-        github.com/acroca/go-symbols \
-        golang.org/x/tools/cmd/guru \
-        golang.org/x/tools/cmd/gorename \
-        github.com/cweill/gotests/gotests \
-        github.com/fatih/gomodifytags \
-        github.com/josharian/impl \
-        github.com/davidrjenni/reftools/cmd/fillstruct \
-        github.com/haya14busa/goplay/cmd/goplay \
-        github.com/godoctor/godoctor \
-        github.com/go-delve/delve/cmd/dlv \
-        github.com/stamblerre/gocode \
-        github.com/rogpeppe/godef \
-        github.com/sqs/goreturns \
-        golang.org/x/lint/golint \
-        golang.org/x/tools/cmd/goimports \
-        golang.org/x/tools/gopls \
-    && \
-    go build -o ${GOPATH}/bin/gocode-gomod github.com/stamblerre/gocode && \
+    sudo apk add go && \
+    go get -v golang.org/x/tools/gopls && \
+    go get -v github.com/uudashr/gopkgs/v2/cmd/gopkgs && \
+    go get -v github.com/ramya-rao-a/go-outline && \
+    go get -v github.com/go-delve/delve/cmd/dlv && \
+    go get -v honnef.co/go/tools/cmd/staticcheck && \
     :
