build: add darwin-arm64 build

--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -40,6 +40,18 @@ jobs:
         GOARCH: amd64
         GOOS: darwin
 
+  release-darwin-arm64:
+    name: release darwin/arm64
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: compile and release
+      uses: ngs/go-release.action@v1.0.1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GOARCH: amd64
+        GOOS: darwin
+
   release-windows-amd64:
     name: release windows/amd64
     runs-on: ubuntu-latest
