chore: add vscode extension

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,7 @@
     "dockerComposeFile": "docker-compose.yml",
     "service": "app",
     "extensions": [
+        "editorconfig.editorconfig",
         "golang.go",
         "ms-azuretools.vscode-docker"
     ],
