--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,7 @@
 FROM nikaro/alpine-dev:latest
 
+ENV PATH "${HOME}/go/bin:${PATH}"
+
 RUN \
     sudo apk add go && \
     go install -v golang.org/x/tools/gopls@latest && \
@@ -7,4 +9,5 @@ RUN \
     go install -v github.com/ramya-rao-a/go-outline@latest && \
     go install -v github.com/go-delve/delve/cmd/dlv@latest && \
     go install -v honnef.co/go/tools/cmd/staticcheck@latest && \
+    go install -v github.com/goreleaser/goreleaser@latest && \
     :
