feat: add config option to override shell

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,5 +16,6 @@
     "vimSettings": [
 	    "let g:go_fmt_command = 'goimports'"
     ],
-    "workspaceFolder": "/workspace"
+    "workspaceFolder": "/workspace",
+    "shell": "fish"
 }
