devcontainer: `sudo` is not installed in Alpine Linux by default, so don't use it
We're executing the Dockerfile commands as root by default anyway.

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -3,7 +3,7 @@ FROM nikaro/alpine-dev:latest
 ENV PATH "${HOME}/go/bin:${PATH}"
 
 RUN \
-    sudo apk add go && \
+    apk add go && \
     go install -v golang.org/x/tools/gopls@latest && \
     go install -v github.com/uudashr/gopkgs/v2/cmd/gopkgs@latest && \
     go install -v github.com/ramya-rao-a/go-outline@latest && \
