--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: ^1.16
+        go-version: ^1.19
 
     - name: GoReleaser
       uses: goreleaser/goreleaser-action@v2
@@ -30,9 +30,5 @@ jobs:
         args: release --rm-dist
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Upload assets
-      uses: actions/upload-artifact@v2
-      with:
-        name: devc
-        path: dist/*
+        AUR_KEY: ${{ secrets.AUR_KEY }}
+        GH_PAT: ${{ secrets.GH_PAT }}
