--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,6 @@ insert_final_newline = true
 [Dockerfile]
 indent_style = space
 
-[*.{json,yml}]
+[*.{md,json,yml}]
 indent_style = space
 indent_size = 2
