--- a/.github/ISSUE_TEMPLATE/BUG-REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG-REPORT.yml
@@ -2,8 +2,7 @@
 
 name: Bug Report
 description: File a bug report
-title: "[Bug] "
-labels: ["bug", "triage"]
+labels: ["bug"]
 assignees:
   - nikaro
 body:
