--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -43,8 +43,8 @@ aurs:
     private_key: "{{ .Env.AUR_KEY }}"
     git_url: "ssh://aur@aur.archlinux.org/devc-bin.git"
     package: |-
-      install -Dm755 -t "${pkgdir}/usr/bin/devc" "./devc"
-      install -Dm644 -t "${pkgdir}/usr/share/licenses/devc/LICENSE" "./LICENSE"
+      install -Dm755 -t "${pkgdir}/usr/bin/" "./devc"
+      install -Dm644 -t "${pkgdir}/usr/share/licenses/devc/" "./LICENSE"
       install -Dm644 -t "${pkgdir}/usr/share/man/man1/" ./man/devc*.1
       install -Dm644 -t "${pkgdir}/usr/share/bash-completion/completions/" "./completions/devc"
       install -Dm644 -t "${pkgdir}/usr/share/fish/vendor_completions.d/" "./completions/devc.fish"
